# bci_workshop

./: .gitignore  BCI_GAME_INTEGRATION.md  Dockerfile  README.md  Vagrantfile  advanced_dashboard.py  athena_streamer.py  docker-compose.yml  drum_trigger.py  game_input.py  install.bat  install.sh  lsl_retro_airplane.py  lsl_snake_game.py  lsl_viewer.py  main.py  phone_imu_bridge.py  ppg_viewer.py  prediction_dashboard.py  pyproject.toml  rhythm_detector.py  setup_vm.sh  watch_imu_streamer.py  watch_imu_viewer_3d.py  watch_ppg_streamer.py  watch_ppg_viewer.py  workshop_demo.py
android-imu-streamer/: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
android-imu-streamer/app/: build.gradle
android-imu-streamer/app/src/main/: AndroidManifest.xml
android-imu-streamer/app/src/main/java/com/neurotech/imustreamer/: MainActivity.kt
android-imu-streamer/app/src/main/res/layout/: activity_main.xml
